# library-management-system

./: README.md
backend/: .env  pyproject.toml
backend/app/: admin_router.py  auth_router.py  book_router.py  crud.py  database.py  dependencies.py  jwt_handler.py  main.py  models.py  schemas.py  security.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AdminRoute.tsx  BookModal.tsx  Navbar.tsx  PrivateRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPanel.tsx  Home.tsx  Login.tsx  MisLibros.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
